--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         </activity>
 
         <meta-data
-            android:name="com.google.android.geo.API_KEY"
+            android:name="${MAPS_API_KEY}"
             android:value="${MAPS_API_KEY}" /> />
 
         <activity android:name=".google" />
